<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UTindergui</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="usercapital">USERNAME</string>
    <string name="pwcapital">PASSWORD</string>
    <string name="logincapi">LOGIN</string>
    <string name="signin">SIGN IN</string>
    <string name="sin">Sign in</string>
    <string name="newacc">or create new account</string>
    <string name="its_wrong">Its wrong</string>
    <string name="welcome">Welcome to</string>
    <string name="utinder">UTinder.</string>
    <string name="nothing"/>
    <string name="sibal">Your friendly school life manager</string>
    <string name="startt">Get Started</string>
    <string name="logo">Logo</string>
    <string name="sign_in_success">Sign In Success!</string>
    <string name="wrong_password_or_username">Wrong password or username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="account_with_the_same_username_or_email_exists">Account with the same username or email exists
    </string>
    <string name="Signup">SIGN UP</string>
    <string name="gs">Get start</string>
    <string name="wy">with your</string>
    <string name="uoftemail">uoft email</string>
    <string name="email_input">name@mail.utoronto.ca</string>
    <string name="email">E-mail</string>
    <string name="Username">Username</string>
    <string name="uname">username</string>
    <string name="pwnc">password</string>
    <string name="signupcomp">Sign up complete!</string>
    <string name="ready">ready to be in UTinder?</string>
    <string name="backto">BACK TO LOGIN</string>
    <string name="greeting">Good Morning,</string>
    <string name="task">Your task for today</string>
    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="task4">Task 4</string>
    <string name="task5">Task 5</string>
    <string name="task6">Task 6</string>
    <string name="Title">Title</string>
    <string name="community">Community</string>
    <string name="sampletitle">Sample title</string>
    <string name="samplecontents">blahblahblah blahblahblah</string>
    <string name="Post1">post1</string>
    <string name="Post2">post2</string>
    <string name="Post3">post3</string>
    <string name="Post4">post4</string>
    <string name="Post5">post5</string>
    <string name="myaccount">My Account</string>
    <string name="followings">Followings</string>
    <string name="user">user</string>
    <string name="follower">Followers</string>
    <string name="addingevent">Create Event</string>
    <string name="eventname">Name of Event *</string>
    <string name="description">Description</string>
    <string name="eventdate">Date *</string>
    <string name="eventtime">Time *</string>
    <string name="category">Category *</string>
    <string name="code">Course Code</string>
    <string name="location">Loacation</string>
    <string name="createevent">Create Event</string>
    <string name="create_event_failed">failed(</string>
    <string name="create_event_success">success</string>
    <string name="date">(YYYY-MM-DD)</string>
    <string name="yourcalendar">Your Calendar</string>
    <string name="eventsonthisdate">DATE</string>
    <string name="back">&#9754;</string>
    <string name="itemname">Event</string>
    <string name="itemtime">HH:MM PM</string>
    <string name="itemlocation">Location</string>
    <string name="cancel">Cancel</string>
    <string name="otheruser">User Name</string>
    <string name="accountt">Account</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="home">Home</string>
    <string name="eventt">Event</string>
    <string name="ADD">Add</string>
    <string name="addingtask">Add your task!</string>
    <string name="taskname"></string>
    <string name="followingnumber">100</string>
    <string name="followernumber">100</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="fillout">Please fill out the information!</string>
    <string name="logout">Log out</string>
    <string name="myacc">My Account</string>
    <string name="posttt">Post</string>
    <string name="Back">Back</string>
    <string name="saysmth">Say Something!</string>
    <string name="cmt">Comment</string>
    <string name="cmtsmth">Comment Something!</string>
    <string name="cmts">Comments:</string>
    <string name="reply">Reply</string>
    <string name="potimer">Pomodoro Timer</string>
    <string name="makepost">Make Post</string>
    <string name="posttitle">Post Title</string>

    <string name="checkbox"></string>
    <string name="email2">EMAIL</string>
    <string name="followname"></string>

    <string name="email2">Email</string>

    <string name="please_enter_your_email_you_made_your_account_with_an_email_with_the_link_to_reset_your_password_will_be_sent">Please Enter your email you made your account with. An email with the link to reset your password will be sent.</string>
    <string name="send">Send</string>
    <string name="please_input_a_valid_email">Please Input a Valid Email</string>
    <string name="please_verify_your_email_to_access_utinder_this_is_for_the_security_of_utinder_community_and_its_users_sorry_for_the_inconvenience_if_you_haven_t_received_any_verification_email_please_click_the_button_below">Please verify your email to access Utinder. This is for the security of Utinder community and its users. Sorry for the inconvenience. If you haven\'t received any verification email, please click the button below.</string>
    <string name="resend">Resend</string>
    <string name="forgot_password">Forgot Password?</string>


</resources>