<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".me.MyAccount" android:background="@color/white">


    <TextView
            android:text="@string/myacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/username"
            android:fontFamily="@font/catamaran_semibold" android:textSize="25sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="30dp"/>


    <TextView
            android:text="@string/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/following"
            android:fontFamily="@font/catamaran_medium" android:textSize="20sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="20dp"
            android:layout_below="@+id/username"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/following_number"
            android:text="@string/followingnumber"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/following"
            android:padding="4dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/username">
    </TextView>

    <LinearLayout
            android:id="@+id/followinglayout"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_below="@+id/following"
            android:orientation="vertical"
            android:background="@drawable/round_shape_tedurikk"
            android:layout_centerHorizontal="true">

        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/followinglist">

        </ListView>

    </LinearLayout>

    <TextView
            android:text="@string/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:fontFamily="@font/catamaran_medium"
            android:textColorHint="@color/uoftcoloourr" android:textColor="@color/uoftcoloourr"
            android:textSize="20sp"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
            android:layout_below="@+id/followinglayout"
            android:layout_marginTop="20dp"
            android:id="@+id/follower"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/follower_number"
            android:text="@string/followernumber"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/follower"
            android:padding="4dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/followinglayout">
    </TextView>

    <LinearLayout
            android:id="@+id/followerlayout"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_below="@+id/follower"
            android:orientation="vertical"
            android:background="@drawable/round_shape_tedurikk"
            android:layout_centerHorizontal="true">

        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/followerlist">

        </ListView>

    </LinearLayout>

    <Button
            android:text="@string/back"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/backbutton"
            app:backgroundTint="@color/greyy"
            android:fontFamily="@font/catamaran_medium"
            android:textSize="15sp"
            android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:layout_marginStart="135dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/followerlayout">
    </Button>

    <Button
            android:text="@string/logout"
            android:layout_width="83dp"
            android:layout_height="40dp"
            android:id="@+id/logoutbutton"
            app:backgroundTint="@color/greyy"
            android:fontFamily="@font/catamaran_medium"
            android:textSize="12sp"
            android:textColor="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:layout_marginStart="210dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/followerlayout">
    </Button>


    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:backgroundTint="@color/white" android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_home_50"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/homebutton"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp" app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/home" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="31dp">
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_calendar_50"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/eventbutton"
                android:layout_marginStart="105dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/eventt" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="107dp"
        >
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_community_grants_64"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/communitybutton"
                android:layout_marginStart="185dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/community" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp"
                android:layout_marginStart="175dp">
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_account_50"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/mebutton"
                android:layout_marginStart="340dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/accountt" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="338dp">
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/clock__1_"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/podomorobutton"
                android:layout_marginStart="267dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/pomodoro" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="260dp">
        </TextView>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>