<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".event.ui.ActivityEvent" android:background="@color/white">

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/yourcalendar" android:id="@+id/yourcalendar"
            android:fontFamily="@font/catamaran_semibold" android:textSize="32sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            android:layout_marginLeft="45dp" android:layout_marginTop="35dp">
    </TextView>

    <View
            android:layout_width="350dp" android:layout_height="1dp"
            android:background="@color/greyy" android:id="@+id/horizontalline"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/yourcalendar" android:layout_marginBottom="-10dp"
            android:layout_centerInParent="true">
    </View>

    <CalendarView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:firstDayOfWeek="1" android:selectedDateVerticalBar="@color/uoftcoloourr"
            android:id="@+id/Calendar_in_eventview" android:layout_centerInParent="true"
            android:layout_marginBottom="70dp"
            android:theme="@style/calendarview" android:background="@color/uoftcoloourr"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText">
    </CalendarView>

    <Button
            android:layout_width="85dp" android:layout_height="42dp"
            android:width="300dp" android:height="60dp"
            android:text="Add event" android:textSize="10sp"
            android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
            app:backgroundTint="@color/greyy"
            android:id="@+id/addingbutton" android:layout_alignTop="@id/Calendar_in_eventview"
            android:layout_marginTop="-50dp" android:layout_alignParentRight="true"
            android:layout_marginRight="35dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:backgroundTint="@color/white" android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_home_50"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/homebutton"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="20dp" app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/home" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="31dp">
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_calendar_50"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/eventbutton"
                android:layout_marginStart="105dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/eventt" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="107dp"
        >
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_community_grants_64"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/communitybutton"
                android:layout_marginStart="185dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/community" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp"
                android:layout_marginStart="175dp">
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/icons8_account_50"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/mebutton"
                android:layout_marginStart="340dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/accountt" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="338dp">
        </TextView>

        <Button
                android:text="@string/nothing" android:background="@drawable/clock__1_"
                android:layout_width="35dp" android:layout_height="35dp" android:id="@+id/podomorobutton"
                android:layout_marginStart="267dp" android:layout_marginBottom="20dp"
                app:backgroundTint="@color/uoftcoloourr"/>
        <TextView
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="@string/pomodoro" android:textSize="12sp"
                android:textColor="@color/uoftcoloourr" android:textColorHint="@color/uoftcoloourr"
                android:layout_marginTop="35dp" android:layout_marginStart="260dp">
        </TextView>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>